cmake_minimum_required(VERSION 3.25)
project(kt2cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(kt2cpp ul2/Tudeng.h ul2/Tudeng.cpp ul2/Oppekava.h ul2/Oppekava.cpp ul2/Oppekavad.h ul2/Oppekavad.cpp ul1/MinuMasiiv.h ul1/MinuMasiiv.cpp ul3/BussiLoogika.cpp ul3/VigaseSumboliErind.h ul3/VigaseReaErind.h ul1/Pikkus.h ul2/OppekavadTest.cpp)
